--- a/projects/04-react-prueba-tecnica/package.json
+++ b/projects/04-react-prueba-tecnica/package.json
@@ -5,10 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "npx playwright test",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@playwright/test": "^1.38.1",
+    "@types/node": "^20.6.5",
     "standard": "^17.1.0",
     "vite": "^4.4.5"
   },
